_source/css/logz-docs.css
/* ... */
li.lunrsearchresult {
  line-height: 1.15rem;
  margin-bottom: 1rem;
}

li.lunrsearchresult .title {
  /* font-size: 1rem; */
  font-weight: 700;
}

li.lunrsearchresult .body {
  font-size: .85rem;
  line-height: 1.15rem;
}

li.lunrsearchresult .url {
  font-size: .75rem;
}

/* ===== PAGE FLAGS ===== */

/* Flags for admin-only or beta feature */

div.page-flags {
  display: flex;
  flex-flow: row wrap;
  font-size: .85rem;
  line-height: 1rem;
  align-self: flex-end;
}

.flag {
  display: inline-block;
  border-radius: 15px;
  width: fit-content;
  padding: 0 .35rem;
  border: 1px solid currentcolor;
}

.flag.admin {
  color: var(--infobox-note);
}

.flag.beta {
  color: var(--infobox-important);
}

/* feature boxes */

div.feature-box {
  width: fit-content;
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  font-size: .9rem;
}

div.feature-box span {
  margin-left: 10px;
  padding: 0;
  color: var(--border-light);
  border: none;
}

.feature-box > div {
  display: flex;
  flex-wrap: nowrap;
}

.feature-box.community .community-plan {
  color: #5eb4e5;
  font-weight: 700;
}

.feature-box.pro .pro-plan, .feature-box.community .pro-plan {
  color: #ffbd1f;
  font-weight: 700;
}

.feature-box.enterprise .enterprise-plan, .feature-box.pro .enterprise-plan, .feature-box.community .enterprise-plan {
  color: #53cbb2;
  font-weight: 700;
}

/* ===== INFO BOXES ===== */

div.info-box {
  width: 90%;
  margin: 2rem auto;
  border-radius: 2px;
  border: 1px solid;
  padding: 10px;
  font-size: 1rem;
}

div.info-box ul {
  padding-left: 20px;
}

div.info-box::before {
  font-weight: 400;
  font-size: .9rem;
  line-height: 1.1em;
  color: white;

  display: block;
  width: fit-content;
  margin: -3px 20px 5px -20px;
  padding-top: 2px;
  padding-bottom: 2px;
  padding-left: 20px;
  padding-right: 15px;
}

div.info-box > p {
  margin: 0;
  line-height: 1.2rem;
}

div.info-box > p + p {
  margin-top: .7rem;
}

/* .warning */
div.info-box.warning {
  background-color: var(--infobox-warning-light);
  border-color: var(--infobox-warning);
}

div.info-box.warning::before {
  content: "Warning   ";
  background-color: var(--infobox-warning);
}

/* .note */
div.info-box.note {
  background-color: var(--infobox-note-light);
  border-color: var(--infobox-note);
}

div.info-box.note::before {
  content: "Note   ";
  background-color: var(--infobox-note);
}

div.info-box.note.notes::before {
  content: "Notes";
}

/* .gotcha, .important */
div.info-box.gotcha, div.info-box.important {
  background-color: var(--infobox-important-light);
  border-color: var(--infobox-important);
}

div.info-box.gotcha::before, div.info-box.important::before {
  content: "Important   ";
  background-color: var(--infobox-important);
}

/* .tip */
div.info-box.tip {
  background-color: var(--infobox-tip-light);
  border-color: var(--infobox-tip);
}

div.info-box.tip::before {
  content: "Pro Tip   ";
  background-color: var(--infobox-tip);
}

/* .read */
div.info-box.read {
  background-color: var(--infobox-read-light);
  border-color: var(--infobox-read);
}

div.info-box.read::before {
  content: "Read more   ";
  background-color: var(--infobox-read);
}

/* .open-source */
div.info-box.open-source {
  background-color: var(--infobox-open-source-light);
  border-color: var(--infobox-open-source);
}

div.info-box.open-source::before {
  content: "Open source project";
  background-color: var(--infobox-open-source);
}


div#toc-collapse-btn {
  min-width: 50px;
  height: 44px;
  text-align: center;
  vertical-align: center;
  display: none;
}

div#toc-collapse-btn * {
  vertical-align: middle;
}

div.site-badge {
  min-width: 190px;
  max-width: 230px;
  min-height: 35px;
  max-height: 35px;
}

div.site-badge img {
  vertical-align: middle;
}

div.site-badge img.logz-symbol {
  display: none;
}

span.docs-home-link {
  font-family: var(--title-font);
  font-size: 1.4rem;
  vertical-align: middle;
  margin-left: 5px;
  color: var(--logz-logo-normal);
}

span.docs-home-link a {
  color: currentColor;
}

div.site-badge a:hover {
  opacity: .5;
}

nav.site-links, nav.site-actions {
  font-size: 1rem;
}

nav.site-actions ul {
  padding-left: 0;
}

nav.site-links li, nav.site-actions li {
  display: inline-block;
  padding: 1rem;
  vertical-align: middle;
}

nav.site-links li {
  margin: auto 1rem;
  width: 1fr;
}

nav.site-actions li {
  margin: auto .25rem;
}

nav.site-links a, nav.site-actions a {
  margin: 0;
  padding: 0;
  display: block;
  text-align: center;
  color: var(--text-link-gray);
}

/* ===== SITE FOOTER ===== */

footer div {
  vertical-align: middle;
  display: inline-block;
}

footer > div {
  margin-left: auto;
  margin-right: auto;
}

footer li:not(:last-child) {
  margin-right: 1.25rem;
}



div.social-icons li.icon {
  font-size: 1.25rem;
  text-align: center;
}

div.social-icons a {
  color: var(--text-light);
}

a.atom-feed {
  color: orange !important;
}

/* social icons */
a.facebook:hover {
  color: #4267b2;
}

a.twitter:hover {
  color: #38a1f3;
}

a.youtube:hover {
  color: #ed3833;
}

a.googleplus:hover {
  color: #db4a39;
}

a.linkedin:hover {
  color: #0077b5;
}

a.github:hover {
  color: black;
}

a.atom-feed:hover {
  color: orange;
}


/* ===== ALL-PAGES TOC STYLING ===== */

.toc-visibility {
  display: auto;
}

nav.all-pages-toc {
  /* positioning */
  display: block;
  height: 100%;
  margin: 0;
  top: 0;
  padding-left: 25px;

  /* text */
  color: var(--text-normal);
  font-family: var(--body-font);
}

nav.all-pages-toc ul {
  list-style: none;
  padding: 0;
  font-weight: 400;
}

ul.toc-parent {
  font-size: var(--toc-font-size);
  text-transform: uppercase;
}

ul.toc-child {
  text-transform: none;
  font-size: var(--toc-font-size);
}

ul.toc-grandchild {
  text-transform: none;
  font-size: var(--toc-font-size);
  margin-left: 1.25rem;
  display: none;
}

span.toc-heading {
  display: block;
  padding-left: .5rem;
  margin-left: -.5rem;
}
/* ... */

